@@ -18,6 +18,7 @@ Bugs fixed:
 - 3101157 Failed to enable provider timing analysis with SfcbLocal
 - 3400114 sfcb fails to start with ipv6 disabled
 - 3310192 32bit sfcbmof fails to run x86_64
+- 3413031 fixes to perform check before calling free
 
 Changes in 1.4.1
 ================
